--- a/src/views/partials/loader.html
+++ b/src/views/partials/loader.html
@@ -1,4 +1,4 @@
-<div class="loader active" style="position: absolute; width: 100vw; height: 100vh; top: 0; background-color: black;">
+<div class="loader active" style="width: 100vw; height: 100vh;">
   <div class="spinner">
     <span></span>
     <span></span>
