--- a/src/views/partials/nav.html
+++ b/src/views/partials/nav.html
@@ -1,4 +1,8 @@
 <header>
-    <img class="image_header" src="images/logo.png" alt="">
-    <button class="login_button">Login</button>
+  <div class="logo-header"><span class="bebas">UNITEC</span></div>
+  <div class="menu-side satoshi">
+    <button class="order-btn satoshi">Ordena ahora</button>
+    <span>Menu</span>
+    <i class="fa fa-bars menu-icon"></i>
+  </div>
 </header>
