--- a/src/public/css/header.css
+++ b/src/public/css/header.css
@@ -1,57 +1,64 @@
-header {
-    position: fixed;
-    top: 0;
+header{
     display: flex;
     justify-content: space-between;
+    position: fixed;
+    align-items: center;
+    top: 0;
     width: 100vw;
-    height: 5.5rem;
-    padding: 0rem 5rem;
+    z-index: 4;
+    padding: 1em 5em;
 }
 
-.image_header{
-    margin: 1rem 0rem;
-}
-
-.login_button {
-    appearance: none;
-    background-color: transparent;
-    border: 0.125em solid #ffffff;
-    border-radius: 0.9375em;
-    box-sizing: border-box;
-    color: hsl(0, 0%, 100%);
+header .logo-header span{
+    color: white;
+    font-size: 2em;
+    z-index: 0;
+    position: relative;
     cursor: pointer;
-    display: inline-block;
-    font-family: Roobert, -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-    font-size: 16px;
-    font-weight: 600;
-    line-height: normal;
-    margin: 0;
-    min-width: 0;
-    width: 9rem;
+}
+
+header::before{
+    z-index: 0;
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0);
+    backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(5px);
+}
+
+header .menu-side{
+    position: relative;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    color: white;
+}
+
+header .menu-side .menu-icon{
+    font-size: 2rem;
+    cursor: pointer;
+    margin-left: 0.5em;
+}
+
+header .menu-side .order-btn{
+    margin-right: 4em;
+    height: 2.5em;
+    width: 10em;
     outline: none;
-    padding: 1em 2.3em;
-    text-align: center;
-    text-decoration: none;
-    transition: all 300ms cubic-bezier(.23, 1, 0.32, 1);
-    user-select: none;
-    -webkit-user-select: none;
-    touch-action: manipulation;
-    will-change: transform;
-    margin: 0.8rem 0rem;
+    border: none;
+    cursor: pointer;
+    color: white;
+    background-color: transparent;
+    border: solid;
+    transition: 0.2s ease-in-out;
 }
 
-.login_button:disabled {
-    pointer-events: none;
-}
-
-.login_button:hover {
-    color: #000000;
-    background-color: #ffffff;
-    box-shadow: rgba(0, 0, 0, 0.25) 0 8px 15px;
-    transform: translateY(-2px);
-}
-
-.login_button:active {
-    box-shadow: none;
-    transform: translateY(0);
+header .menu-side .order-btn:hover{
+    color: black;
+    background-color: white;
 }
