--- a/src/public/css/login.css
+++ b/src/public/css/login.css
@@ -32,7 +32,7 @@ body{
     line-height: 4rem;
 }
 
-.form-container .image-form img{
+.form-container .image-form .logo{
     width: 10rem;
     position: absolute;
     z-index: 10;
@@ -46,8 +46,8 @@ body{
     height: 100%;
     top: 0;
     --gradient-color-1: #0d0d0d;
-    --gradient-color-2: #1b1b60;
-    --gradient-color-3: #3a164b;
+    --gradient-color-2: #2f2f2f;
+    --gradient-color-3: #1a1a1a;
     --gradient-color-4: #121212;
 }
 
@@ -75,7 +75,7 @@ body{
 }
 
 .form-container .form_subcontainer .form_login form .f_password{
-    color: rgb(90, 0, 150);
+    color: rgb(177, 177, 177);
     cursor: pointer;
     width: 100%;
     text-align: end;
@@ -89,7 +89,7 @@ body{
 }
 
 .form-container .form_subcontainer .form_login form .user_new_btn b{
-    color: rgb(90, 0, 150);
+    color: rgb(177, 177, 177);
 }
 
 .form-container .form_subcontainer h2{
@@ -128,16 +128,16 @@ body{
 .form-container .form_subcontainer form .login_btn{
     cursor: pointer;
     width: 100%;
-    background-color: rgb(90, 0, 150);
+    background-color: white;
     border: none;
     outline: none;
     margin-top: 40px;
     height: 3rem;
-    color: white;
+    color: black;
     font-size: 1rem;
-    transition: 0.5s ease-in-out;
+    transition: 0.3s ease-in-out;
 }
 
 .form-container .form_subcontainer form .login_btn:hover{
-    box-shadow: rgb(90, 0, 150) 0px 0px 20px;
+    box-shadow: rgb(255, 255, 255) 0px 0px 10px;
 }
