--- a/src/views/index.html
+++ b/src/views/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Unitec</title>
     <%- include('./partials/head.html') %>
-    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="../css/index.css">
 </head>
 <body class="<%= pagina %>">
 
@@ -62,7 +62,7 @@
                 <li class="splide__slide">
                   <div class="splide_item">
                     <div class="image">
-                      <img src="./images/1.jpg" alt="">
+                      <img src="../images/1.jpg" alt="">
                     </div>
                     <p class="satoshi light">Precio - $350.000</p>
                     <h2 class="satoshi">Audifonos Unitec</h2>
@@ -71,7 +71,7 @@
                 <li class="splide__slide">
                   <div class="splide_item">
                     <div class="image">
-                      <img src="./images/3 (1).jpg" alt="">
+                      <img src="../images/3 (1).jpg" alt="">
                     </div>
                     <p class="satoshi light">Precio - $350.000</p>
                     <h2 class="satoshi">Audifonos Unitec</h2>
@@ -80,7 +80,7 @@
                 <li class="splide__slide">
                   <div class="splide_item">
                     <div class="image">
-                      <img src="./images/2.jpg" alt="">
+                      <img src="../images/2.jpg" alt="">
                     </div>
                     <p class="satoshi light">Precio - $350.000</p>
                     <h2 class="satoshi">Audifonos Unitec</h2>
@@ -89,7 +89,7 @@
                 <li class="splide__slide">
                   <div class="splide_item">
                     <div class="image">
-                      <img src="./images/4 (1).jpg" alt="">
+                      <img src="../images/4 (1).jpg" alt="">
                     </div>
                     <p class="satoshi light">Precio - $350.000</p>
                     <h2 class="satoshi">Audifonos Unitec</h2>
