--- a/src/views/products.html
+++ b/src/views/products.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Products</title>
-  <link rel="stylesheet" href="./css/products.css">
+  <link rel="stylesheet" href="../css/products.css">
   <%- include('./partials/head.html') %>
 </head>
 
@@ -20,7 +20,7 @@
   </section>
   <section class="products">
     <div class="product">
-        <img src="./images/1.jpg" alt="">
+        <img src="../images/1.jpg" alt="">
         <hr>
         <div class="description">
             <h2 class="satoshi">Audifonos Unitec</h2>
@@ -28,7 +28,7 @@
         </div>
     </div>
     <div class="product">
-        <img src="./images/3 (1).jpg" alt="">
+        <img src="../images/3 (1).jpg" alt="">
         <hr>
         <div class="description">
             <h2 class="satoshi">Audifonos Unitec</h2>
@@ -36,7 +36,7 @@
         </div>
     </div>
     <div class="product">
-        <img src="./images/4 (1).jpg" alt="">
+        <img src="../images/4 (1).jpg" alt="">
         <hr>
         <div class="description">
             <h2 class="satoshi">Audifonos Unitec</h2>
@@ -44,7 +44,7 @@
         </div>
     </div>
     <div class="product">
-        <img src="./images/2.jpg" alt="">
+        <img src="../images/2.jpg" alt="">
         <hr>
         <div class="description">
             <h2 class="satoshi">Audifonos Unitec</h2>
