--- a/src/views/partials/footer.html
+++ b/src/views/partials/footer.html
@@ -3,4 +3,4 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js" defer></script>
 <script src="//unpkg.com/split-type" defer></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js" defer></script>
-<script src="scripts/router.js" type="module" defer></script>
+<script src="../scripts/router.js" type="module" defer></script>
