--- a/src/views/partials/head.html
+++ b/src/views/partials/head.html
@@ -1,5 +1,5 @@
-<link rel="stylesheet" href="css/header.css">
-<link rel="stylesheet" href="css/styles.css">
+<link rel="stylesheet" href="../css/header.css">
+<link rel="stylesheet" href="../css/styles.css">
 <link href="https://api.fontshare.com/v2/css?f[]=satoshi@900,700,500,400&display=swap" rel="stylesheet">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
