--- a/src/views/products.html
+++ b/src/views/products.html
@@ -19,32 +19,32 @@
     <p class="satoshi light phrase">Encontrarás un sonido inigualable que redefine tus momentos, porque en nuestro e-commerce, la perfección sonora es más que un estándar; es una promesa cumplida. Descubre la diferencia, porque no hay otro lugar donde encuentres un sonido igual.</p>
   </section>
   <section class="products">
-    <div class="product">
-        <img src="../images/1.jpg" alt="">
+    <div class="product" id="12345">
+        <img src="../images/1.webp" alt="">
         <hr>
         <div class="description">
             <h2 class="satoshi">Audifonos Unitec</h2>
             <p class="satoshi light">$350.000</p>
         </div>
     </div>
-    <div class="product">
-        <img src="../images/3 (1).jpg" alt="">
+    <div class="product" id="12346">
+        <img src="../images/3.webp" alt="">
         <hr>
         <div class="description">
             <h2 class="satoshi">Audifonos Unitec</h2>
             <p class="satoshi light">$350.000</p>
         </div>
     </div>
-    <div class="product">
-        <img src="../images/4 (1).jpg" alt="">
+    <div class="product" id="12347">
+        <img src="../images/4.webp" alt="">
         <hr>
         <div class="description">
             <h2 class="satoshi">Audifonos Unitec</h2>
             <p class="satoshi light">$350.000</p>
         </div>
     </div>
-    <div class="product">
-        <img src="../images/2.jpg" alt="">
+    <div class="product" id="12348">
+        <img src="../images/2.webp" alt="">
         <hr>
         <div class="description">
             <h2 class="satoshi">Audifonos Unitec</h2>
@@ -52,7 +52,9 @@
         </div>
     </div>
   </section>
+
   <%- include('./partials/footer.html') %>
+  
 </body>
 
 </html>
