--- a/src/views/index.html
+++ b/src/views/index.html
@@ -60,36 +60,36 @@
             <div class="splide__track">
               <ul class="splide__list">
                 <li class="splide__slide">
-                  <div class="splide_item">
+                  <div class="splide_item" id="12345">
                     <div class="image">
-                      <img src="../images/1.jpg" alt="">
+                      <img src="../images/1.webp" alt="">
                     </div>
                     <p class="satoshi light">Precio - $350.000</p>
                     <h2 class="satoshi">Audifonos Unitec</h2>
                   </div>
                 </li>
                 <li class="splide__slide">
-                  <div class="splide_item">
+                  <div class="splide_item" id="12346">
                     <div class="image">
-                      <img src="../images/3 (1).jpg" alt="">
+                      <img src="../images/3.webp" alt="">
                     </div>
                     <p class="satoshi light">Precio - $350.000</p>
                     <h2 class="satoshi">Audifonos Unitec</h2>
                   </div>
                 </li>
                 <li class="splide__slide">
-                  <div class="splide_item">
+                  <div class="splide_item" id="12347">
                     <div class="image">
-                      <img src="../images/2.jpg" alt="">
+                      <img src="../images/2.webp" alt="">
                     </div>
                     <p class="satoshi light">Precio - $350.000</p>
                     <h2 class="satoshi">Audifonos Unitec</h2>
                   </div>
                 </li>
                 <li class="splide__slide">
-                  <div class="splide_item">
+                  <div class="splide_item" id="12348">
                     <div class="image">
-                      <img src="../images/4 (1).jpg" alt="">
+                      <img src="../images/4.webp" alt="">
                     </div>
                     <p class="satoshi light">Precio - $350.000</p>
                     <h2 class="satoshi">Audifonos Unitec</h2>
