--- a/src/views/index.html
+++ b/src/views/index.html
@@ -112,7 +112,7 @@
   </section>
 
   <%- include('./partials/footer.html') %>
-  <script type="module" src="../scripts/index.js">
+  <script type="module">
     import * as THREE from "https://cdn.jsdelivr.net/npm/three@0.121.1/build/three.module.js";
     import {
       GLTFLoader
