--- a/src/public/css/dashboard.css
+++ b/src/public/css/dashboard.css
@@ -61,9 +61,9 @@ body {
 
 .navigation ul .menu-item a {
   position: relative;
-  display: block;
   width: 100%;
   display: flex;
+  align-items: center;
   text-decoration: none;
   color: var(--white);
 }
@@ -96,7 +96,7 @@ body {
   white-space: nowrap;
 }
 
-.navigation ul li a .submenu-check{
+.navigation ul li a .submenu-check {
   position: absolute;
   width: 100%;
   height: 100%;
@@ -115,7 +115,7 @@ body {
   --rows: 1fr;
 }
 
-.navigation .dropdown{
+.navigation .dropdown {
   position: relative;
   display: grid;
   grid-template-rows: var(--rows, 0fr);
@@ -131,20 +131,20 @@ body {
   z-index: 10;
 }
 
-.sub-menu li{
+.sub-menu li {
   font-size: 1rem;
-  padding: 15px 30px;
   cursor: pointer;
   position: relative;
 }
 
-.sub-menu li a{
+.sub-menu li a {
   width: 100%;
-  height: 100%;
+  height: 60px;
+  padding: 0 20px;
   position: absolute;
 }
 
-.sub-menu li:hover a{
+.sub-menu li:hover a {
   color: var(--blue);
 }
 
@@ -154,6 +154,7 @@ body {
 .main {
   position: absolute;
   width: calc(100% - 300px);
+  min-height: 100vh;
   left: 300px;
   min-height: 100vh;
   background: var(--white);
@@ -176,11 +177,17 @@ body {
 
 .toggle {
   position: relative;
-  width: 60px;
   height: 60px;
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.toggle h1{
+  margin-left: 30px;
+  font-size: 1.5rem;
+}
+.toggle ion-icon{
   font-size: 2.5rem;
   cursor: pointer;
 }
@@ -528,4 +535,165 @@ body {
     right: 0;
     left: initial;
   }
+}
+
+/*===========TABLAS===============*/
+
+.table-dashboard {
+  position: relative;
+}
+
+.content-dashboard {
+  position: relative;
+  background: var(--white);
+  margin: 30px;
+  min-height: 70vh;
+  padding: 20px;
+  max-width: 100%;
+  width: calc(100% - 60px);
+  overflow-x: scroll;
+  border-radius: 20px;
+  box-shadow: 0 7px 25px rgba(0, 0, 0, 0.08);
+}
+
+.content-dashboard table {
+  min-width: 100vw;
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+.tg.disabled {
+  opacity: 0;
+}
+
+.tg {
+  border-collapse: collapse;
+  border-spacing: 0;
+  border-color: #ccc;
+  position: absolute;
+  z-index: 10;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  max-width: 100%;
+  width: calc(100% - 60px);
+  height: 100%;
+  transition: .3s;
+}
+
+.tg td {
+  font-family: Arial, sans-serif;
+  font-size: 14px;
+  padding: 10px 5px;
+  border-style: solid;
+  border-width: 0px;
+  overflow: hidden;
+  word-break: normal;
+  border-color: #ccc;
+  color: #333;
+  background-color: #fff;
+}
+
+.tg th {
+  font-family: Arial, sans-serif;
+  font-size: 14px;
+  font-weight: normal;
+  padding: 10px 5px;
+  border-style: solid;
+  border-width: 0px;
+  overflow: hidden;
+  word-break: normal;
+  border-color: #ccc;
+  color: #333;
+  background-color: #f0f0f0;
+}
+
+.line {
+  float: left;
+  width: 100px;
+  height: 16px;
+  margin-top: 12px;
+  border-radius: 7px;
+  background-image: linear-gradient(90deg, #F4F4F4 0px, rgba(229, 229, 229, 0.8) 40px, #F4F4F4 80px);
+  background-size: 600px;
+  animation: shine-lines 2s infinite ease-out;
+}
+
+@keyframes shine-lines {
+  0% {
+    background-position: -100px;
+  }
+
+  40%,
+  100% {
+    background-position: 140px;
+  }
+}
+
+.table-dashboard .table-pagination .dt-layout-row,
+.table-dashboard .table-search .dt-layout-row{
+  width: calc(100% -60px);
+  margin: 0 30px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.table-dashboard .table-pagination .paging_full_numbers{
+  width: 20vmin;
+  height: 30px;
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+}
+
+.paging_full_numbers button{
+  outline: none;
+  background-color: white;
+  cursor: pointer;
+  border: 1px solid black;
+  transition: .2s ease-out;
+}
+
+.paging_full_numbers button:hover{
+  background-color: black;
+  color: white;
+}
+
+.table-dashboard .table-search{
+  margin-top: 20px;
+}
+
+.table-search .dt-search input{
+  margin-left: 20px;
+  height: 30px;
+}
+
+.table-search .dt-length select{
+  margin-right: 20px;
+  height: 30px;
+}
+
+.operations{
+  display: flex;
+}
+
+.operations .operation{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.operations .operation.disabled{
+  display: none;
+}
+
+.operations .operation ion-icon{
+  background-color: black;
+  color: white;
+  border-radius: 10px;
+  width: 2rem;
+  height: 2rem;
+  padding: 0.5rem;
+  margin: 0 10px;
+  cursor: pointer;
 }
