--- a/src/views/dashboard.html
+++ b/src/views/dashboard.html
@@ -176,16 +176,24 @@
             </td>
           </tr>
         </table>
-        <div class="table-search"></div>
-        <div class="content-dashboard">
-          <table class="table-entity">
-            <thead class="table-head-entity">            
-            </thead>
-            <tbody class="table-body-entity">
-            </tbody>
-          </table>
+
+        <div class="table-container">
+          <div class="table-search"></div>
+          <div class="content-dashboard">
+            <table class="table-entity">
+              <thead class="table-head-entity">
+              </thead>
+              <tbody class="table-body-entity">
+              </tbody>
+            </table>
+          </div>
+          <div class="table-pagination"></div>
         </div>
-        <div class="table-pagination"></div>
+
+        <div class="entity-container">
+          <form id="form-entity" >
+          </form>
+        </div>
       </content>
 
       <div class="cardBox">
