--- a/src/views/partials/footer.html
+++ b/src/views/partials/footer.html
@@ -1,3 +1,5 @@
+<script src="https://www.gstatic.com/firebasejs/6.2.0/firebase-app.js" defer></script>
+<script src="https://www.gstatic.com/firebasejs/6.2.0/firebase-storage.js" defer></script>
 <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/js/splide.min.js" defer></script>
 <script src="https://unpkg.com/@studio-freight/lenis@1.0.39/dist/lenis.min.js" type="module" defer></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js" defer></script>
