--- a/src/views/partials/navigationDashboard.html
+++ b/src/views/partials/navigationDashboard.html
@@ -57,6 +57,15 @@
         </li>
 
         <li class="menu-item">
+            <a href="../dashboard/users" class="menu-item-link">
+                <span class="icon">
+                    <ion-icon name="person-outline"></ion-icon>
+                </span>
+                <span class="title satoshi">Usuarios</span>
+            </a>
+        </li>
+
+        <li class="menu-item">
             <a href="../" class="menu-item-link">
                 <span class="icon">
                     <ion-icon name="log-out-outline"></ion-icon>
